--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <ul>
-        <li><a href="https://bsky.app/profile/nagato.dev">Bluesky</a></li>
+        <li><a href="https://bsky.app/profile/nagat0.com">Bluesky</a></li>
     </ul>
 
     <img src="http://s.gravatar.com/avatar/14c01d07f2d0f045213eafac6c2ff253?s=128" width="128" height="128" alt="icon" />
