--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         top: 1em;
     }
 </style>
+<link rel="icon" href="http://s.gravatar.com/avatar/14c01d07f2d0f045213eafac6c2ff253?s=128">
 <title>hello world</title>
 </head>
 <body>
