--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         top: 1em;
     }
 </style>
-<link rel="icon" href="http://s.gravatar.com/avatar/14c01d07f2d0f045213eafac6c2ff253?s=128">
+<link rel="icon" href="icon.jpeg">
 <title>hello world</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <li><a href="https://bsky.app/profile/nagat0.com">Bluesky</a></li>
     </ul>
 
-    <img src="http://s.gravatar.com/avatar/14c01d07f2d0f045213eafac6c2ff253?s=128" width="128" height="128" alt="icon" />
+    <img src="icon.jpen" width="128" height="128" alt="icon" />
 
 </body>
 </html>
