--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="https://bsky.app/profile/nagat0.com">Bluesky</a></li>
     </ul>
 
-    <img src="icon.jpen" width="128" height="128" alt="icon" />
+    <img src="icon.jpeg" width="128" height="128" alt="icon" />
 
 </body>
 </html>
