--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         right: 1em;
         top: 1em;
     }
+    li {
+        list-style-type: none;
+    }
 </style>
 <link rel="icon" href="icon.jpeg">
 <title>hello world</title>
@@ -16,6 +19,7 @@
 
     <ul>
         <li><a href="https://bsky.app/profile/nagat0.com">Bluesky</a></li>
+        <li><a href="https://github.com/hnagato">GitHub</a></li>
     </ul>
 
     <img src="icon.jpeg" width="128" height="128" alt="icon" />
