--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <ul>
         <li><a href="https://bsky.app/profile/nagat0.com">Bluesky</a></li>
-        <li><a href="https://github.com/hnagato">GitHub</a></li>
+        <!--<li><a href="https://github.com/hnagato">GitHub</a></li>-->
     </ul>
 
     <img src="icon.jpeg" width="128" height="128" alt="icon" />
